src/parser/parser.cpp
// NAAb Parser - Recursive descent parser
// Assembled from LLVM/Clang parser patterns

#include "naab/parser.h"
#include "naab/limits.h"  // Week 1, Task 1.3: Recursion depth limits
#include "error_hints.h"  // Phase 2.1: Enhanced error hints
#include <fmt/core.h>
#include <algorithm>  // Phase 1.3: for std::transform
#include <cctype>     // Phase 1.3: for ::tolower
#include <unordered_set>  // For reserved keyword checking
#include <unordered_map>  // For keyword suggestions

namespace naab {
namespace parser {

// Week 1, Task 1.3: DepthGuard implementation
Parser::DepthGuard::DepthGuard(size_t& depth) : depth_(depth) {
    if (++depth_ > limits::MAX_PARSE_DEPTH) {
        throw limits::RecursionLimitException(
            "Parser recursion depth exceeded: " +
            std::to_string(depth_) + " > " + std::to_string(limits::MAX_PARSE_DEPTH)
        );
    }
}

Parser::DepthGuard::~DepthGuard() {
    --depth_;
}

// ============================================================================
// Name token helpers - centralized keyword-as-name handling
// ============================================================================

// Helper: Check if a token type can be used as a name (variable, parameter, etc.)
// Many keywords are valid names in context (e.g., 'config', 'init', 'module')
static bool isAllowedNameToken(lexer::TokenType type) {
    switch (type) {
        case lexer::TokenType::IDENTIFIER:
        case lexer::TokenType::CONFIG:
        case lexer::TokenType::INIT:
        case lexer::TokenType::MODULE:
        case lexer::TokenType::FROM:
        case lexer::TokenType::DEFAULT:
        case lexer::TokenType::MATCH:
        case lexer::TokenType::METHOD:
        case lexer::TokenType::NEW:
        case lexer::TokenType::CLASS:
        case lexer::TokenType::ENUM:
        case lexer::TokenType::AS:
        case lexer::TokenType::IN:
        case lexer::TokenType::ASYNC:
        case lexer::TokenType::AWAIT:
        case lexer::TokenType::IMPORT:
        case lexer::TokenType::EXPORT:
        case lexer::TokenType::USE:
        case lexer::TokenType::REF:
        case lexer::TokenType::FUNCTION:  // 'func'/'fn'/'def' used as param names
        case lexer::TokenType::STRUCT:    // 'struct' used as name
        case lexer::TokenType::TRY:
        case lexer::TokenType::CATCH:
        case lexer::TokenType::THROW:
        case lexer::TokenType::FINALLY:
            return true;
        default:
            return false;
    }
}

// Helper: Check if a token type can be used as a member name after '.'
// More permissive than variable names - allows almost all keywords
static bool isAllowedMemberToken(lexer::TokenType type) {
    if (isAllowedNameToken(type)) return true;
    switch (type) {
        case lexer::TokenType::IF:
        case lexer::TokenType::ELSE:
        case lexer::TokenType::FOR:
        case lexer::TokenType::WHILE:
        case lexer::TokenType::BREAK:
        case lexer::TokenType::CONTINUE:
        case lexer::TokenType::RETURN:
        case lexer::TokenType::TRY:
        case lexer::TokenType::CATCH:
        case lexer::TokenType::THROW:
        case lexer::TokenType::FINALLY:
        case lexer::TokenType::LET:
        case lexer::TokenType::CONST:
        case lexer::TokenType::FUNCTION:
        case lexer::TokenType::STRUCT:
        case lexer::TokenType::MAIN:
            return true;
        default:
            return false;
    }
}

// Reserved keywords that cannot be used as variable/parameter names
// Note: 'func'/'fn'/'def' map to FUNCTION token but ARE allowed as param names
// (e.g., `fn apply(func: function)` is valid - 'func' is the param name)
static const std::unordered_set<std::string> forbidden_names = {
    "if", "else", "for", "while", "break", "continue",
    "return", "let", "const", "main", "true", "false", "null"
};

// Helper: Format a helpful error when a reserved keyword is used as a name
static std::string formatReservedNameError(const std::string& name, const std::string& context) {
    std::string msg = fmt::format(
        "'{}' is a reserved keyword and cannot be used as a {} name\n\n"
        "  Help: '{}' is used for control flow in NAAb.\n"
        "  Try a descriptive alternative instead:\n\n",
        name, context, name
    );

    if (name == "if" || name == "else") {
        msg += "  Example:\n"
               "    ✗ Wrong: let if = true\n"
               "    ✓ Right: let condition = true\n"
               "    ✓ Right: let is_ready = true\n";
    } else if (name == "for" || name == "while") {
        msg += "  Example:\n"
               "    ✗ Wrong: let for = items\n"
               "    ✓ Right: let items = [1, 2, 3]\n"
               "    ✓ Right: let loop_count = 10\n";
    } else if (name == "return") {
        msg += "  Example:\n"
               "    ✗ Wrong: let return = getValue()\n"
               "    ✓ Right: let result = getValue()\n"
               "    ✓ Right: let output = getValue()\n";
    } else if (name == "function" || name == "fn" || name == "func" || name == "def") {
        msg += "  Example:\n"
               "    ✗ Wrong: let func = someFunction\n"
               "    ✓ Right: let handler = someFunction\n"
               "    ✓ Right: let callback = someFunction\n";
    } else if (name == "let" || name == "const") {
        msg += "  Example:\n"
               "    ✗ Wrong: func process(let: int)\n"
               "    ✓ Right: func process(value: int)\n";
    } else if (name == "true" || name == "false" || name == "null") {
        msg += "  Example:\n"
               "    ✗ Wrong: let true = 1\n"
               "    ✓ Right: let is_valid = true\n"
               "    ✓ Right: let enabled = false\n";
    } else {
        msg += fmt::format(
               "  Example:\n"
               "    ✗ Wrong: let {} = value\n"
               "    ✓ Right: let my_{} = value\n",
               name, name
        );
    }

    msg += "\n  Note: These keywords ARE allowed as names: config, init, module,\n"
           "        from, default, match, method, new, class, enum, as, in,\n"
           "        async, await, import, export, use, ref";

    return msg;
}

// Helper: Format a helpful error when an unexpected token is found where a name is expected
static std::string formatUnexpectedNameError(const lexer::Token& tok, const std::string& context) {
    std::string msg = fmt::format(
        "Expected {} name, got '{}' ({})\n\n",
        context, tok.value,
        tok.type == lexer::TokenType::LBRACE ? "opening brace" :
        tok.type == lexer::TokenType::LPAREN ? "opening parenthesis" :
        tok.type == lexer::TokenType::RPAREN ? "closing parenthesis" :
        tok.type == lexer::TokenType::COLON ? "colon" :
        tok.type == lexer::TokenType::EQ ? "equals sign" :
        tok.type == lexer::TokenType::COMMA ? "comma" :
        "unexpected token"
    );

    if (context == "variable") {
        msg += "  Help: Variable names must be identifiers.\n\n"
               "  Example:\n"
               "    let myVariable = 10\n"
               "    let user_name = \"Alice\"\n"
               "    let config = {\"key\": \"value\"}\n";
    } else if (context == "parameter") {
        msg += "  Help: Parameter names must be identifiers.\n\n"
               "  Example:\n"
               "    func process(input: string, count: int) {\n"
               "        // ...\n"
               "    }\n";
    } else if (context == "loop variable") {
        msg += "  Help: For-loop variable must be an identifier.\n\n"
               "  Example:\n"
               "    for item in items {\n"
               "        print(item)\n"
               "    }\n";
    }

    return msg;
}

// ============================================================================

Parser::Parser(const std::vector<lexer::Token>& tokens)
    : tokens_(tokens), pos_(0),
      stored_gt_token_(lexer::TokenType::GT, ">", 0, 0),  // Initialize with dummy values
      parser_context_(std::make_unique<ParserContext>()) {  // Phase 2.1: Initialize context
    skipNewlines();  // Skip leading newlines
}

// Destructor definition (must be in .cpp where ParserContext is complete)
Parser::~Parser() = default;

void Parser::setSource(const std::string& source_code, const std::string& filename) {
    filename_ = filename;  // Phase 3.1: Store filename for AST source locations
    error_reporter_.setSource(source_code, filename);
}

// ============================================================================
// Helper Functions for Enhanced Error Messages
// ============================================================================

namespace {
    // Check if a name is a reserved keyword
    bool isReservedKeyword(const std::string& name) {
        static const std::unordered_set<std::string> keywords = {
            "use", "as", "function", "fn", "async", "method", "return",
            "if", "else", "for", "in", "while", "break", "continue",
            "match", "try", "catch", "throw", "finally",
            "struct", "class", "init", "module", "export", "import",
            "new", "config", "main", "let", "const", "await", "null",
            "ref", "enum", "true", "false"
        };
        return keywords.count(name) > 0;
    }

    // Suggest alternative names for reserved keywords
    std::string suggestAlternatives(const std::string& keyword) {
        static const std::unordered_map<std::string, std::string> suggestions = {
            {"config", "cfg, configuration, settings, options"},
            {"class", "cls, klass, type_name"},
            {"function", "func, fn, method_name"},
            {"module", "mod, module_name"},
            {"new", "create, make, build"},
            {"import", "include, require"},
            {"export", "expose, publish"},
            {"const", "constant, value"},
            {"let", "var, variable"},
            {"return", "ret, result"},
            {"async", "asynchronous, async_fn"},
            {"await", "wait, wait_for"}
        };

        auto it = suggestions.find(keyword);
        if (it != suggestions.end()) {
            return it->second;
        }
        return keyword + "_val, my_" + keyword + ", " + keyword + "_var";
    }
}

// ============================================================================
// Token Navigation
// ============================================================================

const lexer::Token& Parser::current() const {
    // If we have a pending token (from >> splitting), return it
    if (pending_token_.has_value()) {
        return *pending_token_;
    }
    if (pos_ < tokens_.size()) {
        return tokens_[pos_];
    }
    return tokens_.back();  // EOF token
}

const lexer::Token& Parser::peek(int offset) const {
    size_t peek_pos = pos_ + offset;
    if (peek_pos < tokens_.size()) {
        return tokens_[peek_pos];
    }
    return tokens_.back();  // EOF token
}

bool Parser::isAtEnd() const {
    return current().type == lexer::TokenType::END_OF_FILE;
}

void Parser::advance() {
    // If we have a pending token (from >> splitting), clear it instead of advancing
    if (pending_token_.has_value()) {
        pending_token_.reset();
        updateParserContext();  // Phase 2.1: Update context
        return;
    }
    if (!isAtEnd()) {
        pos_++;
        updateParserContext();  // Phase 2.1: Update context after advancing
    }
}

bool Parser::match(lexer::TokenType type) {
    if (check(type)) {
        // Track brace positions for better error messages
        if (type == lexer::TokenType::LBRACE) {
            brace_stack_.push_back(current().line);
        } else if (type == lexer::TokenType::RBRACE && !brace_stack_.empty()) {
            brace_stack_.pop_back();
        }
        advance();
        return true;
    }
    return false;
}

bool Parser::check(lexer::TokenType type) const {
    return current().type == type;
}

const lexer::Token& Parser::expect(lexer::TokenType type, const std::string& msg) {
    if (check(type)) {
        // Track brace positions for better error messages
        if (type == lexer::TokenType::LBRACE) {
            brace_stack_.push_back(current().line);
        } else if (type == lexer::TokenType::RBRACE && !brace_stack_.empty()) {
            brace_stack_.pop_back();
        }
        const auto& token = current();
        advance();
        return token;
    }

    // Phase 2.1: Use enhanced error hints for better error messages
    const auto& token = current();
    error_reporter_.error(msg, token.line, token.column);

    // Get context-aware hints
    auto hints = getErrorHints(token, msg);
    for (const auto& hint : hints) {
        error_reporter_.addSuggestion(hint);
    }

    // Enhanced error for missing '}' - show where the opening '{' was
    if (type == lexer::TokenType::RBRACE && !brace_stack_.empty()) {
        size_t open_line = brace_stack_.back();

        // Count total braces in file for diagnostic
        size_t total_open = 0, total_close = 0;
        for (const auto& t : tokens_) {
            if (t.type == lexer::TokenType::LBRACE) total_open++;
            else if (t.type == lexer::TokenType::RBRACE) total_close++;
        }

        std::string enhanced_msg = fmt::format(
            "{}\n\n"
            "  The opening '{{' was at line {}.\n"
            "  Brace count in file: {} opening '{{' vs {} closing '}}' ({} missing)\n\n"
            "  Help:\n"
            "  - You are missing {} closing '}}' brace(s)\n"
            "  - Check that all blocks (if/for/while/func/main) between line {} and EOF are properly closed\n"
            "  - This is NOT a parser limitation — the file just has mismatched braces",
            formatError(msg, token), open_line,
            total_open, total_close,
            total_open > total_close ? total_open - total_close : total_close - total_open,
            total_open > total_close ? total_open - total_close : total_close - total_open,
            open_line);
        throw ParseError(enhanced_msg);
    }

    std::string err = formatError(msg, token);
    if (!hints.empty()) {
        err += "\n";
        for (const auto& hint : hints) {
            err += "  " + hint + "\n";
        }
    }
    throw ParseError(err);
}

// Helper function to handle '>' in nested generics (splits '>>' into two '>')
const lexer::Token& Parser::expectGTOrSplitGTGT(const std::string& msg) {
    if (check(lexer::TokenType::GT)) {
        const auto& token = current();
        advance();
        return token;
    }

    // Handle >> as two separate > tokens for nested generics
    if (check(lexer::TokenType::GT_GT)) {
        const auto& token = current();
        // Advance position past the GT_GT first
        pos_++;

        // Create first > token and store it
        stored_gt_token_ = lexer::Token(lexer::TokenType::GT, ">", token.line, token.column);
        // Create second > token for pending (will be consumed next)
        lexer::Token second_gt(lexer::TokenType::GT, ">", token.line, token.column + 1);
        pending_token_ = second_gt;

        // Return a reference to the first > token (no advance needed, already moved pos)
        return stored_gt_token_;
    }

    // Neither GT nor GT_GT found - error
    const auto& token = current();
    error_reporter_.error(msg, token.line, token.column);
    error_reporter_.addSuggestion(fmt::format("Expected '>' but got: '{}'", token.value));
    throw ParseError(formatError(msg, token));
}

void Parser::skipNewlines() {
    while (match(lexer::TokenType::NEWLINE)) {
        // Skip
    }
}

void Parser::collectDocComments() {
    // Collect consecutive COMMENT tokens (from /// doc comments)
    // and extract @intent declarations. Called after skipNewlines()
    // in the top-level parsing loop.
    pending_intent_.clear();
    std::string doc_lines;
    while (!isAtEnd() && check(lexer::TokenType::COMMENT)) {
        doc_lines += current().value;
        doc_lines += '\n';
        advance();
        // Skip newlines between consecutive /// lines
        while (match(lexer::TokenType::NEWLINE)) {}
    }
    if (doc_lines.empty()) return;

    // Extract @intent "..." from accumulated doc comment text
    size_t intent_pos = doc_lines.find("@intent");
    if (intent_pos == std::string::npos) return;

    // Find the quoted intent string
    size_t quote_start = doc_lines.find('"', intent_pos + 7);
    if (quote_start == std::string::npos) return;
    size_t quote_end = doc_lines.find('"', quote_start + 1);
    if (quote_end == std::string::npos) {
        // Multi-line: intent spans until last quote in doc block
        quote_end = doc_lines.rfind('"');
        if (quote_end <= quote_start) return;
    }
    pending_intent_ = doc_lines.substr(quote_start + 1, quote_end - quote_start - 1);
    // Normalize whitespace in multi-line intents
    for (char& c : pending_intent_) {
        if (c == '\n') c = ' ';
    }
    // Collapse multiple spaces
    std::string normalized;
    bool prev_space = false;
    for (char c : pending_intent_) {
        if (c == ' ' && prev_space) continue;
        normalized += c;
        prev_space = (c == ' ');
    }
    pending_intent_ = normalized;
}

void Parser::optionalSemicolon() {
    match(lexer::TokenType::SEMICOLON);  // Optional semicolon for compatibility
}

void Parser::synchronize() {
    // Skip tokens until we find a top-level keyword boundary
    while (!isAtEnd()) {
        auto type = current().type;
        if (type == lexer::TokenType::USE ||
            type == lexer::TokenType::IMPORT ||
            type == lexer::TokenType::EXPORT ||
            type == lexer::TokenType::STRUCT ||
            type == lexer::TokenType::ENUM ||
            type == lexer::TokenType::INTERFACE ||
            type == lexer::TokenType::FUNCTION ||
            type == lexer::TokenType::ASYNC ||
            type == lexer::TokenType::RUNTIME ||
            type == lexer::TokenType::MAIN) {
            return;  // Found a sync point
        }
        advance();
    }
}

// Helper: format location string with optional filename
std::string Parser::formatLocation(int line, int column) {
    if (!filename_.empty()) {
        return fmt::format("in {} at line {}, column {}", filename_, line, column);
    }
    return fmt::format("at line {}, column {}", line, column);
}

std::string Parser::formatError(const std::string& msg, const lexer::Token& token) {
    std::string base = fmt::format("Parse error {}: {}\n  Got: '{}'",
                      formatLocation(token.line, token.column), msg, token.value);

    // U7: Add source context if available
    if (error_reporter_.hasSource() && token.line > 0) {
        base += "\n";
        size_t start_line = (token.line > 2) ? token.line - 2 : 1;
        size_t end_line = token.line + 1;
        size_t line_num_width = std::to_string(end_line).length();
        for (size_t i = start_line; i <= end_line; ++i) {
            std::string src_line = error_reporter_.getSourceLine(i);
            if (src_line.empty() && i > token.line) break;
            bool is_err = (i == token.line);
            base += fmt::format("  {} {:>{}} | {}\n",
                is_err ? ">" : " ", i, line_num_width, src_line);
            if (is_err && token.column > 0) {
                base += fmt::format("    {:>{}}   {:>{}}^\n",
                    "", line_num_width, "", token.column - 1);
            }
        }
    }

    return base;
}

// ============================================================================
// Program Structure
// ============================================================================

std::unique_ptr<ast::Program> Parser::parseProgram() {
    std::vector<std::unique_ptr<ast::UseStatement>> imports;
    std::vector<std::unique_ptr<ast::FunctionDecl>> functions;
    std::unique_ptr<ast::MainBlock> main_block;

    skipNewlines();

    // Parse use statements (blocks from registry)
    // Note: import statements (file-based modules) are parsed later in the main loop
    while (check(lexer::TokenType::USE)) {
        // Look ahead to distinguish between:
        // - use BLOCK-CPP-12345 as Cord (block import - has BLOCK_ID token)
        // - use math_utils (module import - has IDENTIFIER token)
        // - use math_utils as math (module import with alias - has IDENTIFIER + AS)
        size_t saved_pos = pos_;
        advance();  // skip 'use'
        skipNewlines();

        // Check if this is a block import (starts with BLOCK_ID or STRING)
        // Module imports use regular IDENTIFIERs
        bool is_block_import = false;
        if (check(lexer::TokenType::BLOCK_ID) || check(lexer::TokenType::STRING)) {
            is_block_import = true;
        }

        // Restore position and parse accordingly
        pos_ = saved_pos;

        if (is_block_import) {
            imports.push_back(parseUseStatement());
        } else {
            break;  // Not a block import, will be handled in main loop as module use
        }

        skipNewlines();
    }

    // Collect module imports, exports, structs, and enums in vectors
    std::vector<std::unique_ptr<ast::ImportStmt>> module_imports;
    std::vector<std::unique_ptr<ast::ModuleUseStmt>> module_uses;  // Phase 4.0
    std::vector<std::unique_ptr<ast::ExportStmt>> exports;
    std::vector<std::unique_ptr<ast::StructDecl>> structs;
    std::vector<std::unique_ptr<ast::EnumDecl>> enums;  // Phase 2.4.3
    std::vector<std::unique_ptr<ast::InterfaceDecl>> interfaces;  // Phase 6
    std::vector<std::unique_ptr<ast::RuntimeDeclStmt>> runtime_decls;  // S11: Top-level runtime

    // Parse module imports, exports, structs, and functions (Phase 3.1)
    // S10: Panic-mode recovery — collect multiple errors instead of stopping at first
    while (!isAtEnd()) {
        skipNewlines();
        collectDocComments();  // Accumulate /// doc comments, extract @intent

        // Recovery progress guard: if an error is thrown while the cursor
        // sits on a synchronize() sync-point token (e.g. a duplicate 'main'),
        // recovery would otherwise make no progress and loop forever.
        size_t iter_start_pos = pos_;

        try {

        if (check(lexer::TokenType::USE)) {
            // Lookahead: block import or module import?
            size_t saved_pos = pos_;
            advance();  // skip 'use'
            skipNewlines();
            bool is_block = check(lexer::TokenType::BLOCK_ID) || check(lexer::TokenType::STRING);
            pos_ = saved_pos;
